Created a complete temperature and totaldemand file with all the states

--- a/Rahul-Workings/Data-Set-Combiner.ipynb
+++ b/Rahul-Workings/Data-Set-Combiner.ipynb
@@ -26,8 +26,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
+   "id": "7f5971be",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filepath = '../../H06-2021/' # If you want to run the code, change the file path to where you store the files. This reference\n",
+    "                                # is to where I store the files outside the github clone\n",
+    "# filename = 'totaldemand_nsw'\n",
+    "ext = '.csv'\n",
+    "\n",
+    "states = ['nsw','qld','sa','vic']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "a9e6e0a1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 'temprature', 'totaldemand', 'forecastdemand' <-correct your NSW temperature filename to temprature\n",
+    "\n",
+    "filename = 'temprature'\n",
+    "temp = pd.DataFrame(columns=['LOCATION','DATETIME','TEMPERATURE'])\n",
+    "\n",
+    "for state in states:\n",
+    "    input = pd.read_csv(filepath+filename+'_'+state+ext)\n",
+    "    temp = pd.concat([temp,input], ignore_index=True)\n",
+    "    \n",
+    "temp.to_csv(filename+ext)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "b7cd19e1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "filename = 'totaldemand'\n",
+    "demand = pd.DataFrame(columns=['DATETIME','TOTALDEMAND','REGIONID'])\n",
+    "\n",
+    "for state in states:\n",
+    "    input = pd.read_csv(filepath+filename+'_'+state+ext)\n",
+    "    demand = pd.concat([demand,input], ignore_index=True)\n",
+    "    \n",
+    "demand.to_csv(filename+ext)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "d3fa48b5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# data = pd.DataFrame(columns=['DATETIME','TOTALDEMAND','REGIONID'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a75825fb",
    "metadata": {},
    "outputs": [],
    "source": []
