--- a/Rahul-Workings/Data-Set-Combiner.ipynb
+++ b/Rahul-Workings/Data-Set-Combiner.ipynb
@@ -1697,6 +1697,58 @@
   {
    "cell_type": "code",
    "execution_count": 10,
+   "id": "338a6ec1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1369251, 10)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "combined_fdavg.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "91eef634",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "STATE                  0\n",
+       "DATETIME               0\n",
+       "TOTALDEMAND       583187\n",
+       "LOCATION          591074\n",
+       "TEMPERATURE       591074\n",
+       "FORECASTDEMAND    951239\n",
+       "Weekday                0\n",
+       "Quarter                0\n",
+       "Month                  0\n",
+       "Season                 0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "combined_fdavg.isnull().sum(axis = 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "id": "05c454a4",
    "metadata": {},
    "outputs": [],
