--- a/Rahul-Workings/Data-Set-Combiner.ipynb
+++ b/Rahul-Workings/Data-Set-Combiner.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "0d0013bc",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "1285f070",
    "metadata": {},
    "outputs": [],
@@ -1844,8 +1844,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "id": "0edd6ce0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Sunset sunrise\n",
+    "\n",
+    "sunrise = pd.DataFrame(columns=['STATE','SUNRISE','SUNSET'])\n",
+    "\n",
+    "def hour_split(number):\n",
+    "    number = str(number)\n",
+    "    hour = number[:-2]\n",
+    "    return (hour)\n",
+    "\n",
+    "def min_split(number):\n",
+    "    number = str(number)\n",
+    "    minutes = number[-2:]\n",
+    "    return int(minutes)\n",
+    "\n",
+    "filepath2 = '../../UNSW-PROJECT-DATA/Sunrise Sunset Data/'\n",
+    "STATE2 = ['NSW', 'QLD', 'SA', 'VIC']\n",
+    "filename = 'times of sunrise and sunset annual results '\n",
+    "years = ['2010', '2011', '2012', '2013', '2014', '2015', '2016', '2017', '2018', '2019', '2020', '2021']\n",
+    "\n",
+    "for state in STATE2:\n",
+    "    for year in years:\n",
+    "        df = pd.read_csv(filepath2+state+'/'+filename+year+ext)\n",
+    "        df['year'] = int(year)\n",
+    "        df['risehr'] = df['rise'].apply(hour_split)\n",
+    "        df['risemn'] = df['rise'].apply(min_split)\n",
+    "        df['sethr'] = df['set'].apply(hour_split)\n",
+    "        df['setmn'] = df['set'].apply(min_split)\n",
+    "        df['SUNRISE']= pd.to_datetime(dict(year=df.year, month=df.month, day = df.day, hour = df.risehr, minute = df.risemn))\n",
+    "        df['SUNSET']= pd.to_datetime(dict(year=df.year, month=df.month, day = df.day, hour = df.sethr, minute = df.setmn))\n",
+    "        df = df[['SUNRISE','SUNSET']]\n",
+    "        df['STATE'] = state\n",
+    "        sunrise = pd.concat([sunrise,df], ignore_index=True)\n",
+    "\n",
+    "sunrise.to_csv('../data/'+'sunrise_sunset_combined'+ext)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "481c0e8a",
    "metadata": {},
    "outputs": [],
    "source": []
