--- a/Rahul-Workings/Data-Set-Combiner.ipynb
+++ b/Rahul-Workings/Data-Set-Combiner.ipynb
@@ -59,6 +59,7 @@
     "for state in states:\n",
     "    df = pd.read_csv(filepath+filename+'_'+state+ext)\n",
     "    df['STATE'] = state.upper()\n",
+    "    df['DATETIME'] = pd.to_datetime(df['DATETIME'])\n",
     "    temp = pd.concat([temp,df], ignore_index=True)\n",
     "    \n",
     "temp = temp[['STATE','LOCATION','DATETIME','TEMPERATURE']]\n",
@@ -80,6 +81,7 @@
     "for state in states:\n",
     "    df = pd.read_csv(filepath+filename+'_'+state+ext)\n",
     "    df['STATE'] = state.upper()\n",
+    "    df['DATETIME'] = pd.to_datetime(df['DATETIME'])\n",
     "    demand = pd.concat([demand,df], ignore_index=True)\n",
     "\n",
     "demand = demand[['STATE','DATETIME','TOTALDEMAND']]\n",
@@ -105,6 +107,7 @@
     "    df = pd.read_csv(filepath+filename+'_'+state+ext)\n",
     "    df = df.groupby('DATETIME').mean().reset_index()\n",
     "    df['STATE'] = state.upper()\n",
+    "    df['DATETIME'] = pd.to_datetime(df['DATETIME'])\n",
     "    df = df[['STATE','FORECASTDEMAND','DATETIME']]\n",
     "    fdemand = pd.concat([fdemand,df], ignore_index=True)\n",
     "    \n",
@@ -235,7 +238,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "60780234",
+   "id": "dbeb6b6f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 11,
    "id": "4fc996ed",
    "metadata": {},
    "outputs": [],
@@ -265,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 12,
    "id": "532a9cd5",
    "metadata": {},
    "outputs": [],
@@ -277,99 +280,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 13,
    "id": "d2ccc799",
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>STATE</th>\n",
-       "      <th>LOCATION</th>\n",
-       "      <th>DATETIME</th>\n",
-       "      <th>TEMPERATURE</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>NSW</td>\n",
-       "      <td>Bankstown</td>\n",
-       "      <td>1/1/2010 0:00</td>\n",
-       "      <td>23.1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>NSW</td>\n",
-       "      <td>Bankstown</td>\n",
-       "      <td>1/1/2010 0:01</td>\n",
-       "      <td>23.1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>NSW</td>\n",
-       "      <td>Bankstown</td>\n",
-       "      <td>1/1/2010 0:30</td>\n",
-       "      <td>22.9</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>NSW</td>\n",
-       "      <td>Bankstown</td>\n",
-       "      <td>1/1/2010 0:50</td>\n",
-       "      <td>22.7</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>NSW</td>\n",
-       "      <td>Bankstown</td>\n",
-       "      <td>1/1/2010 1:00</td>\n",
-       "      <td>22.6</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "  STATE   LOCATION       DATETIME  TEMPERATURE\n",
-       "0   NSW  Bankstown  1/1/2010 0:00         23.1\n",
-       "1   NSW  Bankstown  1/1/2010 0:01         23.1\n",
-       "2   NSW  Bankstown  1/1/2010 0:30         22.9\n",
-       "3   NSW  Bankstown  1/1/2010 0:50         22.7\n",
-       "4   NSW  Bankstown  1/1/2010 1:00         22.6"
+       "STATE              0\n",
+       "DATETIME           0\n",
+       "TOTALDEMAND    56756\n",
+       "LOCATION       64643\n",
+       "TEMPERATURE    64643\n",
+       "Weekday            0\n",
+       "Quarter            0\n",
+       "Month              0\n",
+       "Season             0\n",
+       "Day                0\n",
+       "Year               0\n",
+       "SUNRISE            0\n",
+       "SUNSET             0\n",
+       "DAYTYPE            0\n",
+       "dtype: int64"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "temp.head()"
+    "# Dont remove\n",
+    "combined.isna().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "fc120fae",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "STATE                  0\n",
+       "DATETIME               0\n",
+       "TOTALDEMAND        58220\n",
+       "LOCATION           66107\n",
+       "TEMPERATURE        66107\n",
+       "FORECASTDEMAND    426259\n",
+       "Weekday                0\n",
+       "Quarter                0\n",
+       "Month                  0\n",
+       "Season                 0\n",
+       "Day                    0\n",
+       "Year                   0\n",
+       "SUNRISE                0\n",
+       "SUNSET                 0\n",
+       "DAYTYPE                0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "combined_fdavg.isna().sum()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fc120fae",
+   "id": "376a1d90",
    "metadata": {},
    "outputs": [],
    "source": []
