Adding updated/debugged version of temperature interpolator/backfiller with multi-state support

--- a/src/Mat/temp_cleaner.ipynb
+++ b/src/Mat/temp_cleaner.ipynb
@@ -947,7 +947,7 @@
    "source": [
     "# Write out the cleaned up temperature data in the same format as was originally supplied. This can then be used in pre-existing processing notebooks  \n",
     "final = backfilled[['LOCATION','DATETIME','TEMPERATURE']]\n",
-    "final.to_csv('temperature_nsw_cleaned.csv')"
+    "final.to_csv('temperature_nsw_cleaned.csv', index=False)"
    ]
   },
   {
