just minor changes

--- a/Rahul-Workings/EDA.ipynb
+++ b/Rahul-Workings/EDA.ipynb
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "288d17c6",
    "metadata": {},
    "outputs": [
@@ -211,7 +211,7 @@
        "4  2010-01-01 19:10:00   Night  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "e44408f0",
    "metadata": {},
    "outputs": [
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "84016bc1",
    "metadata": {},
    "outputs": [
@@ -455,7 +455,7 @@
        "4   Night    January  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -466,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "c0a9b652",
    "metadata": {},
    "outputs": [
@@ -598,7 +598,7 @@
        "max        31.000000    2021.000000  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -609,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "8c7a7956",
    "metadata": {},
    "outputs": [
@@ -634,7 +634,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -645,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "a650a67c",
    "metadata": {},
    "outputs": [
@@ -655,7 +655,7 @@
        "(842820, 15)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -666,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "8a1b0fd1",
    "metadata": {},
    "outputs": [
@@ -691,7 +691,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -702,7 +702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "9bf3f001",
    "metadata": {},
    "outputs": [
@@ -715,7 +715,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -726,7 +726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "bee2fa60",
    "metadata": {},
    "outputs": [
@@ -828,7 +828,7 @@
        "Year           -0.054078     0.016050 -0.036223 -0.036629 -0.019101  1.000000"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -839,7 +839,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "f373e273",
    "metadata": {},
    "outputs": [
@@ -864,7 +864,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "ad61a19f",
    "metadata": {},
    "outputs": [
@@ -889,7 +889,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "2d93a00f",
    "metadata": {},
    "outputs": [
@@ -914,7 +914,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "2fbdfb46",
    "metadata": {},
    "outputs": [
@@ -939,7 +939,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "32ae6dcb",
    "metadata": {},
    "outputs": [
@@ -964,7 +964,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "a348542c",
    "metadata": {},
    "outputs": [
@@ -1076,7 +1076,7 @@
        "Month Name        0.00"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1307,8 +1307,235 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "79a3023b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sa_df = data.loc[data['STATE'] == 'SA']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "6f5b0b97",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>STATE</th>\n",
+       "      <th>DATETIME</th>\n",
+       "      <th>TOTALDEMAND</th>\n",
+       "      <th>LOCATION</th>\n",
+       "      <th>TEMPERATURE</th>\n",
+       "      <th>Weekday</th>\n",
+       "      <th>Quarter</th>\n",
+       "      <th>Month</th>\n",
+       "      <th>Season</th>\n",
+       "      <th>Day</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>SUNRISE</th>\n",
+       "      <th>SUNSET</th>\n",
+       "      <th>DAYTYPE</th>\n",
+       "      <th>Month Name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>429715</th>\n",
+       "      <td>SA</td>\n",
+       "      <td>2010-01-01 00:30:00</td>\n",
+       "      <td>1385.23</td>\n",
+       "      <td>Adelaide (Kent Town)</td>\n",
+       "      <td>23.7</td>\n",
+       "      <td>Friday</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Summer</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>2010-01-01 05:35:00</td>\n",
+       "      <td>2010-01-01 20:02:00</td>\n",
+       "      <td>Night</td>\n",
+       "      <td>January</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>429716</th>\n",
+       "      <td>SA</td>\n",
+       "      <td>2010-01-01 01:00:00</td>\n",
+       "      <td>1338.53</td>\n",
+       "      <td>Adelaide (Kent Town)</td>\n",
+       "      <td>23.5</td>\n",
+       "      <td>Friday</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Summer</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>2010-01-01 05:35:00</td>\n",
+       "      <td>2010-01-01 20:02:00</td>\n",
+       "      <td>Night</td>\n",
+       "      <td>January</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>429717</th>\n",
+       "      <td>SA</td>\n",
+       "      <td>2010-01-01 01:30:00</td>\n",
+       "      <td>1260.39</td>\n",
+       "      <td>Adelaide (Kent Town)</td>\n",
+       "      <td>22.6</td>\n",
+       "      <td>Friday</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Summer</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>2010-01-01 05:35:00</td>\n",
+       "      <td>2010-01-01 20:02:00</td>\n",
+       "      <td>Night</td>\n",
+       "      <td>January</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>429718</th>\n",
+       "      <td>SA</td>\n",
+       "      <td>2010-01-01 02:00:00</td>\n",
+       "      <td>1189.31</td>\n",
+       "      <td>Adelaide (Kent Town)</td>\n",
+       "      <td>22.0</td>\n",
+       "      <td>Friday</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Summer</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>2010-01-01 05:35:00</td>\n",
+       "      <td>2010-01-01 20:02:00</td>\n",
+       "      <td>Night</td>\n",
+       "      <td>January</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>429719</th>\n",
+       "      <td>SA</td>\n",
+       "      <td>2010-01-01 02:30:00</td>\n",
+       "      <td>1141.12</td>\n",
+       "      <td>Adelaide (Kent Town)</td>\n",
+       "      <td>21.9</td>\n",
+       "      <td>Friday</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Summer</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>2010-01-01 05:35:00</td>\n",
+       "      <td>2010-01-01 20:02:00</td>\n",
+       "      <td>Night</td>\n",
+       "      <td>January</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       STATE            DATETIME  TOTALDEMAND              LOCATION  \\\n",
+       "429715    SA 2010-01-01 00:30:00      1385.23  Adelaide (Kent Town)   \n",
+       "429716    SA 2010-01-01 01:00:00      1338.53  Adelaide (Kent Town)   \n",
+       "429717    SA 2010-01-01 01:30:00      1260.39  Adelaide (Kent Town)   \n",
+       "429718    SA 2010-01-01 02:00:00      1189.31  Adelaide (Kent Town)   \n",
+       "429719    SA 2010-01-01 02:30:00      1141.12  Adelaide (Kent Town)   \n",
+       "\n",
+       "        TEMPERATURE Weekday  Quarter  Month  Season  Day  Year  \\\n",
+       "429715         23.7  Friday        1      1  Summer    1  2010   \n",
+       "429716         23.5  Friday        1      1  Summer    1  2010   \n",
+       "429717         22.6  Friday        1      1  Summer    1  2010   \n",
+       "429718         22.0  Friday        1      1  Summer    1  2010   \n",
+       "429719         21.9  Friday        1      1  Summer    1  2010   \n",
+       "\n",
+       "                   SUNRISE              SUNSET DAYTYPE Month Name  \n",
+       "429715 2010-01-01 05:35:00 2010-01-01 20:02:00   Night    January  \n",
+       "429716 2010-01-01 05:35:00 2010-01-01 20:02:00   Night    January  \n",
+       "429717 2010-01-01 05:35:00 2010-01-01 20:02:00   Night    January  \n",
+       "429718 2010-01-01 05:35:00 2010-01-01 20:02:00   Night    January  \n",
+       "429719 2010-01-01 05:35:00 2010-01-01 20:02:00   Night    January  "
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sa_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "57d613c1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nsw_df.to_excel('test.xlsx')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "dd013ec2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "STATE                          NSW\n",
+       "DATETIME       2021-05-02 01:00:00\n",
+       "TOTALDEMAND                 7069.2\n",
+       "LOCATION                 Bankstown\n",
+       "TEMPERATURE                   21.5\n",
+       "Weekday                     Sunday\n",
+       "Quarter                          2\n",
+       "Month                            5\n",
+       "Season                      Autumn\n",
+       "Day                              2\n",
+       "Year                          2021\n",
+       "SUNRISE        2021-05-02 06:31:00\n",
+       "SUNSET         2021-05-02 17:14:00\n",
+       "DAYTYPE                      Night\n",
+       "Month Name                     May\n",
+       "Name: 218585, dtype: object"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nsw_df.iloc[218585]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "22fae696",
    "metadata": {},
    "outputs": [],
    "source": []
